# quran-verse-id-offline

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/: runner.py
benchmark/test_corpus/: manifest.json
docs/: RUNBOOK_M4_MAX.md
experiments/phonetic_ctc_align/: README.md  run.py
scripts/: build_benchmark_from_sources.py  build_phonetic_db.py  export_onnx.py  fetch_missing_everyayah_samples.py  import_offline_tarteel_benchmark.sh  interactive_benchmark_cli.sh  quantize_onnx.py  train_finetune_phonetic_ctc.py
src/quran_verse_id/: audio.py  ctc_scorer.py  matcher.py  normalizer.py  phonetic_db.py
tests/: test_ctc_scorer.py  test_normalizer.py  test_phonetic_db.py
